--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -82,11 +82,11 @@
 
             <mtr:MetroTabItem Header="Home" Height="40">
                 <Grid>
-                    <Grid HorizontalAlignment="Left" Width="299" Margin="0,0">
-                        <TextBlock Text="Open New Files" Height="34" Width="279" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18"  Margin="10,15,0,0"/>
+                    <Grid HorizontalAlignment="Left" Width="494" Margin="0,0">
+                        <TextBlock Text="Open Files" Height="34" Width="279" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18"  Margin="10,15,0,0"/>
                         <TextBlock x:Name="TextBlock_OpenEDF" TextDecorations="Underline" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,49,0,0" FontSize="14"><Hyperlink Click="TextBlock_OpenEDF_Click" FontSize="14"><Run Text="Open EDF..."/></Hyperlink></TextBlock>
-                        <TextBlock Text="Recently Opened Files" Height="34" VerticalAlignment="Top" FontSize="18" Margin="10,136,10,0"/>
-                        <ItemsControl x:Name="itemControl_RecentEDF" Foreground="Blue" BorderBrush="Transparent" Margin="10,170,10,10" FontSize="14">
+                        <TextBlock Text="Recent Files" Height="34" VerticalAlignment="Top" FontSize="18" Margin="0,15,10,0" HorizontalAlignment="Right" Width="279"/>
+                        <ItemsControl x:Name="itemControl_RecentEDF" Foreground="Blue" BorderBrush="Transparent" Margin="0,49,10,15" FontSize="14" HorizontalAlignment="Right" Width="279">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock FontSize="14" TextDecorations="Underline" HorizontalAlignment="Left"  x:Name="tb"><Hyperlink Click="TextBlock_Recent_Click"><InlineUIContainer>
