--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -204,17 +204,17 @@
                                 <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
                                 <!-- From Binary -->
                                 <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
-                                <Button Content="Open" Width="122" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINRespiratoryAnalysis_Click" />
+                                <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINRespiratoryAnalysis_Click" />
                                 <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Left" Margin="10,6,0,6" Grid.Column="2" Grid.Row="1" IsChecked="{Binding RespiratoryUseConstantAxis}"/>
                                 <!-- From EDF -->
                                 <Label Content="EDF" FontSize="14" Margin="0,5,20,5" Grid.Row="2"/>
-                                <Label Content="Signal" FontSize="14" Width="50" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="2"/>
-                                <ComboBox Margin="60,6,115,6" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding RespiratoryEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
-                                <Label Content="From" FontSize="14" Width="52" HorizontalAlignment="Left" Margin="6,7,0,3" HorizontalContentAlignment="Center" Grid.Column="2" Grid.Row="2"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="58,8,10,4" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFStartRecord}" Minimum="{Binding RespiratoryEDFStartRecordMin}" Maximum="{Binding RespiratoryEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                <Label Content="Duration" FontSize="14" Width="67" HorizontalAlignment="Left" Margin="6,7,0,3" HorizontalContentAlignment="Center" Grid.Column="3" Grid.Row="2"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="73,8,10,4" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFDuration}" Minimum="{Binding RespiratoryEDFDurationMin}" Maximum="{Binding RespiratoryEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
-                                <Button Content="Go" Margin="0,6,10,6" IsEnabled="{Binding IsEDFLoaded}" Click="button_EDFRespiratoryAnalysis_Click" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Width="100" />
+                                <Label Content="Signal" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="2"/>
+                                <ComboBox Margin="80,5,65,5" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding RespiratoryEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
+                                <Label Content="From" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="2"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFStartRecord}" Minimum="{Binding RespiratoryEDFStartRecordMin}" Maximum="{Binding RespiratoryEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
+                                <Label Content="Duration" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,7,0,3" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding RespiratoryEDFDuration}" Minimum="{Binding RespiratoryEDFDurationMin}" Maximum="{Binding RespiratoryEDFDurationMax}" Grid.Column="3" Grid.Row="2"/>
+                                <Button Content="Go" Margin="0,6,10,6" IsEnabled="{Binding IsEDFLoaded}" Click="button_EDFRespiratoryAnalysis_Click" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Width="50" />
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
@@ -239,32 +239,32 @@
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="70"/>
-                                    <ColumnDefinition MaxWidth="300" Width="300*"/>
+                                    <ColumnDefinition MaxWidth="400" Width="400*"/>
                                     <ColumnDefinition MaxWidth="250" Width="250*"/>
-                                    <ColumnDefinition MaxWidth="250" Width="150"/>
-                                    <ColumnDefinition Width="300*" MaxWidth="220"/>
-                                    <ColumnDefinition Width="120*" MaxWidth="120"/>
+                                    <ColumnDefinition Width="250*" MaxWidth="250"/>
+                                    <ColumnDefinition MaxWidth="20" Width="20*"/>
                                 </Grid.ColumnDefinitions>
                                 <!-- Section Headers -->
                                 <Label Content="Signal Selection" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left"  Grid.ColumnSpan="2"/>
                                 <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
                                 <!-- From Binary -->
                                 <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
-                                <Button Content="Open" Width="122" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINEEGAnalysis_Click" />
+                                <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1" Click="button_BINEEGAnalysis_Click" />
                                 <!-- From EDF -->
-                                <Label Content="EDF" FontSize="16" Margin="0,5,20,5" Grid.Row="2"/>
-                                <Label Content="Signal" FontSize="16" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Center" Grid.Column="1" Grid.Row="2"/>
-                                <ComboBox Margin="80,6,10,6" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding EEGEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
-                                <Label Content="Epoch #" FontSize="16" Width="75" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Center" Grid.Column="2" Grid.Row="2"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="90,6,6,6" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding EpochForAnalysis}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                <Button Content="Analyze" Margin="12,6" IsEnabled="{Binding IsEDFLoaded}" Click="button_EDFEEGAnalysis_Click" Grid.Column="3" Grid.Row="2" />
+                                <Label Content="EDF" FontSize="14" Margin="0,5,20,5" Grid.Row="2"/>
+                                <Label Content="Signal" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="2"/>
+                                <ComboBox Margin="80,5,65,5" IsEnabled="{Binding IsEDFLoaded}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding EEGEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
+                                <Label Content="Epoch #" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="2"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding EpochForAnalysis}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
+                                <Button Content="Go" Margin="0,6,10,6" IsEnabled="{Binding IsEDFLoaded}" Click="button_EDFEEGAnalysis_Click" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Width="50" />
 
-                                <Label Content="Epoch From" FontSize="16" Margin="5,6,0,4" HorizontalContentAlignment="Center" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Left" Width="120"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="130,5,66,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="4" Grid.Row="1" RenderTransformOrigin="0.056,0.364" Grid.ColumnSpan="2"/>
+                                <Label Content="From" FontSize="14" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Width="70"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="1" RenderTransformOrigin="0.056,0.364"/>
 
-                                <Label Content="Epoch To" FontSize="16" Margin="5,6,0,4" HorizontalContentAlignment="Center" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Left" Width="120"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="130,5,66,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochEnd}"  Grid.Column="4" Grid.Row="2" RenderTransformOrigin="0.056,0.364" Grid.ColumnSpan="2"/>
-                                <Button Content="Export" Margin="75,6,-80,4" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGCalculations_Click" Grid.Column="5" Grid.Row="2" />
+                                <Label Content="To" FontSize="14" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Left" Width="70"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochEnd}"  Grid.Column="3" Grid.Row="2" RenderTransformOrigin="0.056,0.364"/>
+                                <Button Content="Export" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGCalculations_Click" Grid.Column="3" Margin="101,3,10,3"/>
+                                <Label Content="Export" FontSize="18" Width="80" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="3"/>
                             </Grid>
 
                             <Label Content="Plot" FontSize="18" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="200" Margin="10,130,0,0"/>
@@ -310,19 +310,19 @@
                                     <Label Content="Plot Options" FontSize="18" Width="200" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
                                     <!-- From Binary -->
                                     <Label Content="Binary" FontSize="14" Margin="0,5,20,5" Grid.Row="1"/>
-                                    <Button Content="Open" Width="122" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1"/>
-                                    <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="2" Grid.Row="1" IsChecked="{Binding CoherenceUseConstantAxis}"/>
+                                    <Button Content="Open" Width="100" HorizontalAlignment="Left" Margin="10,8,0,8" Grid.Column="1" Grid.Row="1"/>
+                                    <ToggleButton Content="CONSTANT AXIS" Width="100" HorizontalAlignment="Left" Margin="10,6,0,6" Grid.Column="2" Grid.Row="1" IsChecked="{Binding CoherenceUseConstantAxis}"/>
                                     <!-- From EDF -->
                                     <Label Content="EDF" FontSize="14" Margin="0,5,20,0" Grid.Row="2"/>
                                     <Label Content="Signal 1" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="1" Grid.Row="2"/>
-                                    <ComboBox Margin="80,5,115,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal1}" Grid.Column="1" Grid.Row="2"/>
+                                    <ComboBox Margin="80,5,65,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal1}" Grid.Column="1" Grid.Row="2"/>
                                     <Label Content="Signal 2" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="10,5,0,-31" Grid.Column="1" Grid.Row="3"/>
-                                    <ComboBox Margin="80,5,115,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="3"/>
-                                    <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,0" Grid.Column="2" Grid.Row="2"/>
-                                    <mtr:NumericUpDown Margin="77,7,10,10" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
-                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,-27" Grid.Column="2" Grid.Row="3"/>
-                                    <mtr:NumericUpDown Margin="77,7,10,10" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="3"/>
-                                    <Button x:Name="button_PerformCoherenceAnalysis" Content="Go" Margin="0,6,10,6" Grid.Column="1" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Click="button_PerformCoherenceAnalysis_Click" Grid.Row="2" HorizontalAlignment="Right" Width="100" />
+                                    <ComboBox Margin="80,5,65,5" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding CoherenceEDFSelectedSignal2}" Grid.Column="1" Grid.Row="3"/>
+                                    <Label Content="From" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="2"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFStartRecord}" Minimum="{Binding CoherenceEDFStartRecordMin}" Maximum="{Binding CoherenceEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
+                                    <Label Content="Duration" Width="70" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Column="2" Grid.Row="3"/>
+                                    <mtr:NumericUpDown Margin="77,5,10,5" TextAlignment="Center" FontSize="14" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Value="{Binding CoherenceEDFDuration}" Minimum="{Binding CoherenceEDFDurationMin}" Maximum="{Binding CoherenceEDFDurationMax}" Grid.Column="2" Grid.Row="3"/>
+                                    <Button x:Name="button_PerformCoherenceAnalysis" Content="Go" Margin="0,6,10,6" Grid.Column="1" IsEnabled="{Binding CoherenceEDFNavigationEnabled}" Click="button_PerformCoherenceAnalysis_Click" Grid.Row="2" HorizontalAlignment="Right" Width="50" />
                                 </Grid>
 
                                 <Grid Margin="10,175,10,0">
