--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -262,7 +262,7 @@
                                 <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="1" RenderTransformOrigin="0.056,0.364"/>
 
                                 <Label Content="To" FontSize="14" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Left" Width="70"/>
-                                <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochEnd}"  Grid.Column="3" Grid.Row="2" RenderTransformOrigin="0.056,0.364"/>
+                                <mtr:NumericUpDown FontSize="14" Margin="77,5,10,5" TextAlignment="Center" IsEnabled="{Binding IsEDFLoaded}" Value="{Binding ExportEpochEnd}" Minimum="{Binding ExportEpochStart}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="2" RenderTransformOrigin="0.056,0.364"/>
                                 <Button Content="Export" IsEnabled="{Binding IsEDFLoaded}" Click="button_ExportEEGCalculations_Click" Grid.Column="3" Margin="101,3,10,3"/>
                                 <Label Content="Export" FontSize="18" Width="80" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="3"/>
                             </Grid>
